--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,8 @@
-# IntelliJ Platform Artifacts Repositories -> https://plugins.jetbrains.com/docs/intellij/intellij-artifacts.html
-
-pluginGroup = com.github.kkckkc.newopeninsplittedtab
-pluginName = NewOpenInSplittedTab
+pluginGroup = org.para.plugin
+pluginName = openInSplittedTab
 pluginRepositoryUrl = https://github.com/kkckkc/NewOpenInSplittedTab
 # SemVer format -> https://semver.org
-pluginVersion = 0.0.1
+pluginVersion = 0.2.2
 
 # Supported build number ranges and IntelliJ Platform versions -> https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 pluginSinceBuild = 252
@@ -22,9 +20,6 @@ platformBundledModules =
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 9.2.1
-
-# Opt-out flag for bundling Kotlin standard library -> https://jb.gg/intellij-platform-kotlin-stdlib
-kotlin.stdlib.default.dependency = false
 
 # Enable Gradle Configuration Cache -> https://docs.gradle.org/current/userguide/configuration_cache.html
 org.gradle.configuration-cache = true
